# QtPromise

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in  skin.css
doc/src/: Ownership.dox  QtPromise.dox  SignalEmission.dox  main.dox
doc/src/namespace/: QtPromise.dox
doc/src/page/: LogMessages.dox  Ownership.dox  PromiseChaining.dox  QVariant.dox  SignalEmission.dox
docs/: CMakeLists.txt  Doxyfile.in
documentation/: Doxyfile.in  skin.css
src/: CMakeLists.txt  ChildDeferred.cpp  ChildDeferred.h  Deferred.cpp  Deferred.h  FutureDeferred.cpp  FutureDeferred.h  FuturePromise.cpp  FuturePromise.h  NetworkDeferred.cpp  NetworkDeferred.h  NetworkPromise.cpp  NetworkPromise.h  Promise.cpp  Promise.h  PromiseSitter.cpp  PromiseSitter.h  Promise_impl.h
tests/: CMakeLists.txt
tests/Deferred/: CMakeLists.txt  DeferredTest.cpp
tests/FuturePromise/: CMakeLists.txt  FuturePromiseTest.cpp
tests/NetworkPromise/: CMakeLists.txt  NetworkPromiseTest.cpp
tests/NetworkPromise/data/: DummyData.txt
tests/Promise/: CMakeLists.txt  PromiseTest.cpp
tests/PromiseSitter/: CMakeLists.txt  PromiseSitterTest.cpp
